{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player1",
            "id": "c975653a-f241-42b4-96f5-cc4f44ee58ec",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "33fe5695-c6d4-49ab-b416-79536d3aa1a9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "f4f25bea-d795-4747-b5f0-c47343f64d37",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "f466eb86-86f6-42c2-b651-71ffa926f1b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "0acdb3a3-3f8a-422a-a911-f5014deaa26b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "64857710-2889-4c07-a154-ad042189ed9d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25a5d471-fe32-4947-b2d8-8cfa53899632",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2437d0de-63a3-41f0-9a46-5ce6652cf540",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5a66d5a-4643-4f0c-9d37-099eb0c1392e",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "f160b2fb-4bf9-4c4c-895d-39de82f97f68",
            "actions": [
                {
                    "name": "left",
                    "type": "Button",
                    "id": "10c74ab4-bd7f-47d1-83a3-e5d5391e524a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "right",
                    "type": "Button",
                    "id": "8c09a355-d85d-4ebd-a874-6c893519d7ba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "ff4f6112-2532-40fa-aea9-7a8e50a1380c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "up",
                    "type": "Button",
                    "id": "7130f3e1-7a30-4147-9382-1451378a40de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0ba390b4-4867-483f-91d1-e0da04486131",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4328e125-1853-4afd-b63f-b2fe44f3fa4d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4fed618c-0c73-4115-a1b3-5960106abcf1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bf3235de-9b01-4b00-9e05-03e04cce17ec",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}